Bug 391331 - Backward button is disabled when action "Show Image" from context menu is used
Summary: Backward button is disabled when action "Show Image" from context menu is used
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-03 12:33 UTC by Juraj
Modified: 2018-03-17 13:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In: 3.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juraj 2018-03-03 12:33:35 UTC
Hello,
backward button is disabled on the tab when action "Show image" from context menu is used.
It starts to work again when I switch to another tab and back.

Steps to reproduce:
- Open new tab and go to some page with image
- Click on the image with Right Mouse Button
- Select action "Show image"
- Minimal page with the image is displayed
- Backward button is disabled
- Go to another tab and back > Backward button is enabled

I was able to trigger this behaviour only on tabs without backwards history.
So from this perspective it looks like the "Backward" button is not enabled.
Comment 1 Anmol Gautam 2018-03-03 12:55:44 UTC
(In reply to Juraj from comment #0)
> Hello,
> backward button is disabled on the tab when action "Show image" from context
> menu is used.
> It starts to work again when I switch to another tab and back.
> 
> Steps to reproduce:
> - Open new tab and go to some page with image
> - Click on the image with Right Mouse Button
> - Select action "Show image"
> - Minimal page with the image is displayed
> - Backward button is disabled
> - Go to another tab and back > Backward button is enabled
> 
> I was able to trigger this behaviour only on tabs without backwards history.
> So from this perspective it looks like the "Backward" button is not enabled.

Hi Juraj,
I am unable to reproduce this issue. Can you specify a particular url for which it doesn't work.

Regards
Comment 2 Juraj 2018-03-03 13:02:38 UTC
Can you specify a particular url for which it doesn't work. ?
Any, but the tabs has to have no backwards history.
Comment 3 Anmol Gautam 2018-03-03 13:09:52 UTC
(In reply to Juraj from comment #2)
> Can you specify a particular url for which it doesn't work. ?
> Any, but the tabs has to have no backwards history.

Yeah, it doesn't works for github profile but works here - http://imaging.nikon.com/lineup/lens/zoom/normalzoom/af-s_dx_18-140mmf_35-56g_ed_vr/sample.htm
Comment 4 Juraj 2018-03-03 13:21:51 UTC
"Yeah, it doesn't works for github profile but works here"
It works on any page, you just need to have tab with no backwards history.
To achieve this you can open link in a new tab.

Video tutorial (i was forced to use external service for the video):
https://drive.google.com/open?id=1a0KBQlOpebUXRtH7MgHgX1brGX7Zt6px

Falkon:
Application version 3.0.0
QtWebEngine version 5.10.1
Comment 5 Juraj 2018-03-03 13:25:47 UTC
(In reply to Anmol Gautam from comment #3)
> (In reply to Juraj from comment #2)
> > Can you specify a particular url for which it doesn't work. ?
> > Any, but the tabs has to have no backwards history.
> 
> Yeah, it doesn't works for github profile but works here -
> http://imaging.nikon.com/lineup/lens/zoom/normalzoom/af-s_dx_18-140mmf_35-
> 56g_ed_vr/sample.htm

You are right, it the backward button works fine on this site / page.

I just misunderstood in my last post.
Comment 6 The_assassin 2018-03-05 06:51:26 UTC
I am unable to reproduce this with Falkon built from git source, but can reproduce it with 3.0.0 built with precompiled Qt 5.10.1.
Comment 7 David Rosca 2018-03-17 13:00:16 UTC
Git commit dc131ddfee2d34e011cf5ca78d6aa31b788f695b by David Rosca.
Committed on 17/03/2018 at 12:55.
Pushed by drosca into branch 'Falkon/3.0'.

NavigationBar: Fix syncing back/forward buttons state with web history
FIXED-IN: 3.0.1

M  +0    -5    src/lib/app/browserwindow.cpp
M  +0    -1    src/lib/app/browserwindow.h
M  +18   -14   src/lib/navigation/navigationbar.cpp
M  +2    -2    src/lib/navigation/navigationbar.h
M  +0    -1    src/lib/tabwidget/tabwidget.cpp
M  +0    -10   src/lib/webtab/tabbedwebview.cpp
M  +0    -1    src/lib/webtab/tabbedwebview.h

https://commits.kde.org/falkon/dc131ddfee2d34e011cf5ca78d6aa31b788f695b