NavigationBar: Fix syncing back/forward buttons state with web history

BUG: 391331
FIXED-IN: 3.0.1